# mercourier

./: .env.example  .gitignore  LICENSE.md  README.md  add_worktree.sh  anyio_test.py  async_main.py  config_and_secrets.example.py  config_secrets.example  config_secrets.example.py  install.sh  main.py  mercourier.service  os_dependencies.sh  pyproject.toml  requirements.txt  template.py  update.sh
.github/workflows/: checks.yml  deploy.yml  linter.yml  main.yml  test.yml
bot/: __init__.py  bot.py  config.py
mercourier/: __init__.py  config.py  github.py  gitlab.py  template.py  zulipbot.py
templates/: comment_template.md  commit_template.md  issue_template.md  pr_template.md  push_template.md
tests/: test_events.json  test_github.py  test_template.py
