[project]
name = "mercourier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["zulip>=0.9.0"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.5"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
